@@ -33,6 +33,7 @@ Use the port when checking LDAP settings
 Hash password with password_hash
 Fix a typo on staticts rights
 Fix-encoding-issues
+handle single perso_id when adding absences
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
